DevOps: Update build packagers in root. Add BuildPackager.ps1, remove bat. Clean launchers dir.